# FusionPCR-Studio

./: .gitignore  .prettierignore  BUILDPLAN_STATUS.md  CHANGELOG.md  CITATION.cff  Cargo.toml  EXPERIMENTAL_MODULES.md  LIMITATIONS.md  METHODS.md  POLYMERASE_PROFILES.md  PROJECT_FORMAT.md  README.md  THERMODYNAMIC_MODELS.md  UX_ACCEPTANCE.md  VALIDATION.md  buildplan.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  deploy-pages.yml
crates/fusion-core/: Cargo.toml
crates/fusion-wasm/: Cargo.toml
crates/fusion-wasm/src/: lib.rs
examples/: README.md
examples/exact-fusion/: project.json
examples/insertion/: project.json
examples/mutation/: project.json
examples/protein-fusion/: project.json
scripts/: capture-preview.mjs  generate-tm-reference.py  smoke-pages.mjs
src/: App.test.tsx  App.tsx  design-tokens.css  main.tsx  styles.css
src/components/: ConfirmationDialog.tsx  ContextInspector.tsx  ExperimentalNotice.tsx  IssueDrawer.tsx  JunctionStep.test.tsx  JunctionStep.tsx  PrimerStep.tsx  ProjectToolbar.tsx  ProtocolExportStep.tsx  ReactionTimeline.tsx  SequenceStep.tsx  StepNavigation.tsx  WelcomeScreen.tsx  designPanels.tsx
src/data/: example.ts
src/hooks/: useAppFocusManagement.ts  useFusionDesign.ts  useProjectController.ts  useProjectPersistence.ts  useViewportMode.ts
src/utils/: app-ui.ts  editor.test.ts  editor.ts  export.test.ts  export.ts  feature-flags.ts  features.test.ts  features.ts  pcr.ts  (+27 more)
test-data/: README.md
validation/: README.md
(+24 files in other folders)
