[package]
name = "fusion-wasm"
version = "0.1.0-alpha.3"
edition = "2024"
license = "MIT"
description = "WASM bindings for FusionPCR Studio core functions."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fusion-core = { path = "../fusion-core" }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
